--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blog",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "eleventy --serve",
     "build": "eleventy",
@@ -12,7 +13,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy": "^3.0.0-beta.1",
+    "@11ty/eleventy-plugin-rss": "^2.0.2",
     "prettier": "^3.3.3"
   }
 }
