--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0",
     "@11ty/eleventy-plugin-rss": "^2.0.3",
-    "prettier": "^3.4.2"
+    "prettier": "^3.5.3",
+    "shiki": "^3.2.2"
   }
 }
